src/objects/UM_ProductInterest__c.object
<CustomObject>
    <description>This object is for capturing interest in multiple products</description>
    <fields>
        <fullName>UM_Capex__c</fullName>
        <label>Capex</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UM_Chance__c</fullName>
        <inlineHelpText>0% - LOSS
10% - Lead, Interessent, Kontakt mit Kunden
30% - Bedarfsanalyse
40% - ON HOLD
60% - Termin vor Ort, Angebotsphase, Capex-Kosten ermittelt, Angebot in schriftlicher Form liegt vor
90% - Commitment des Kunden vorhanden
100% - WIN</inlineHelpText>
        <label>Chance</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>UM_Chance</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>UM_ContractTerm__c</fullName>
        <description>Number field to capture contract term in months</description>
        <inlineHelpText>Contract term in months</inlineHelpText>
        <label>Contract Term</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UM_Forecast__c</fullName>
        <label>Forecast</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>UM_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Product Interest</relationshipLabel>
        <relationshipName>Product_Interest</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UM_MRR__c</fullName>
        <label>MRR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UM_OTC__c</fullName>
        <label>OTC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UM_Opex__c</fullName>
        <label>Opex</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UM_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Product Interest</relationshipLabel>
        <relationshipName>Product_Interest</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UM_ProductDetails__c</fullName>
        <description>Free text field to capture details about the product interest</description>
        <inlineHelpText>Free text field to capture details about the product interest</inlineHelpText>
        <label>Product Details</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>UM_Product__c</fullName>
        <description>Picklist to capture Product Interest</description>
        <label>Product</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>UM_Product</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>UM_ProjectLoadTotal__c</fullName>
        <formula>UM_Quantity__c *  UM_ContractTerm__c *  (UM_MRR__c +  UM_OTC__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Load (Total)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UM_ProjectLoadWeighted__c</fullName>
        <description>Translates the change picklist value to string and than to integer and calculates the weighted project load.</description>
        <formula>VALUE(
CASE( UM_Chance__c ,
 &apos;0%&apos;, TEXT(0),
 &apos;10%&apos;, TEXT(0.10),
 &apos;20%&apos;, TEXT(0.20),
 &apos;30%&apos;, TEXT(0.30),
 &apos;40%&apos;, TEXT(0.40),
 &apos;50%&apos;, TEXT(0.50),
 &apos;60%&apos;, TEXT(0.60),
 &apos;70%&apos;, TEXT(0.70),
 &apos;80%&apos;, TEXT(0.8),
 &apos;90%&apos;, TEXT(0.9),
 &apos;100%&apos;,TEXT(1),
TEXT(0))
)
* UM_ProjectLoadTotal__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Load (Weighted)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UM_Quantity__c</fullName>
        <description>Number field to capture product interest quantity</description>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UM_ROI__c</fullName>
        <inlineHelpText>ROI in months</inlineHelpText>
        <label>ROI</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Product Interest</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PI{00000000}</displayFormat>
        <label>Product Interest Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Interest</pluralLabel>
    <recordTypes>
        <fullName>Lead</fullName>
        <active>true</active>
        <label>Lead</label>
    </recordTypes>
    <recordTypes>
        <fullName>Oppty</fullName>
        <active>true</active>
        <label>Oppty</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>UM_ForecastInFuture</fullName>
        <active>true</active>
        <errorConditionFormula>UM_Forecast__c &lt;=  TODAY()</errorConditionFormula>
        <errorDisplayField>UM_Forecast__c</errorDisplayField>
        <errorMessage>Forecast must be in the future</errorMessage>
    </validationRules>
</CustomObject>